test/test_units/test_kclvm/test_types/invalid_test_data/protocol/protocol_4.k
a = None

schema DataMixin for a:
    x: int = data
